# mining-pool-api

./: .gitignore  README.md
mining-pool-api/: .env  Cargo.toml
mining-pool-api/migrations/2022-10-17-004341_mining_pool_api/: up.sql
mining-pool-api/src/: main.rs  miner.rs  miner_controller.rs  util.rs  wallet.rs  wallet_controller.rs
